docs: add api spec for get video by category content and trash category
